plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls' ]
}

application {
    mainClass = 'app.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'
}

run {
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls'
    ]
}